--- a/_posts/2019-07-13-E0-CCPD.md
+++ b/_posts/2019-07-13-E0-CCPD.md
@@ -121,8 +121,7 @@ Recently, I became aware of debug_info flag: setting debug_info: true in 'solver
 这次完整地跑完了，损失函数也变得很小。经过检验，发现在 CCPD 数据集表现很好，然后从网上下载一些类似的照片，识别的也不错。  
 不过用 iPhone 在街上找的照片识别起来就差很多，这也在意料之中，因为 iPhone 拍的照片分辨率很高，放大后看得清车牌，可是传入神经网络就被压缩成 416×416 的范围了，相当与变成了很小的目标。另外，新能源的绿色车牌与大型车辆的黄色车牌均不能识别，这也在意料之中。  
 不过下面这张图片识别出的有些奇怪，车牌是黄底的（图片是 opencv 转换过的，所以 R 和 B 颜色通道是反的），可是车体的放大车牌号码被识别出来了（车身黄色），这是否说明：神经网络是通过汉字数字组合来识别车牌？  
-![img1](/img/IMG_0339.JPG)  
-![img2](/img/IMG_0339_detect.JPG)  
+![img1](/img/IMG_0339.JPG) ![img2](/img/IMG_0339_detect.JPG)  
 无独有偶，[石星](https://cryer.github.io/2018/04/object_detection2/) 在做车牌检测任务时，贴出的图也有相似现象：  
 ![img3](/img/anotherplaterecg.jpg)  
 他用的是印度的车牌数据库训练，车牌都是字母和数字。训练完，用中国的车牌子测试，发现框在了字母数字区域，而表示省份的打头汉字一般被无情地框在外面。所以，CNN 网络是通过学习认识了“一排字母和数字”。  
