--- a/_posts/2019-07-14-E0-CCPD.md
+++ b/_posts/2019-07-14-E0-CCPD.md
@@ -5,7 +5,7 @@ title: E#0 车牌识别
 img: chepaishibie.jpg
 color: FF6F00
 author: 扑兔
-description: 这是第零号实验记录，训练集来自 CCPD，代码托管在 GitHub，使用 YOLOv3 识别车牌，“扭正”，再识别车牌内容。经过一番对比市面上的商用识别以及几个开源项目，发现，基本上蓝牌、黄牌都能正确识别，某些项目不能识别新能源车牌，我还没有见到能正确识别武警车牌、北京白底车牌，以及网上搜到的个性牌。
+description: 这是第零号实验记录，训练集来自 CCPD，代码托管在 GitHub，使用 YOLOv3 识别车牌，“扭正”，再识别车牌内容。经过一番对比市面上的商用识别以及几个开源项目，发现，基本上蓝牌、黄牌都能正确识别，某些项目不能识别新能源车牌，基本上都不能正确识别武警车牌、北京白底车牌，以及网上搜到的个性牌。
 ---
 
 **前言**  
