更新实验记录

--- a/_posts/2019-07-14-E0-CCPD.md
+++ b/_posts/2019-07-14-E0-CCPD.md
@@ -51,23 +51,19 @@ YOLOv3 接受 416×416 的图片，CCPD2019 的图片为 720×1160 大小。
 用人造数据进行训练，观察实际效果咋样。  
 
 **车牌位置**  
+-
 
 **识别车牌内容**  
+-
 
 **代码**  
 [https://github.com/DamageControlStudio/LPSayWhat](https://github.com/DamageControlStudio/LPSayWhat)  
-
-**思考**  
-
-- 识别车体放大的牌号
-- 部分遮挡的识别  
-- 车标、车体颜色、车型（小汽车、卡车、货车）的识别
 
 **实验记录**  
 第一次尝试，350000 张 CCPD 训练集，留下 10000 张用于测试，其他全部喂进神经网络，运行一小时后突然想起来，这要是 30 个 epoch，粗略算下来得跑上一个月。但是我没有立即 ctrl+c，而是仔细看了一下 train.py 每个 epoch 运行下来是有保存的，所以，至少跑完一轮再看看。  
 结果数个小时后，遇到了 loss 变成 nan，此时，1 个 epoch 还没完事，log 如下：  
 
-```
+``` log
 => STEP 46129   lr: 0.000270   giou_loss: 0.56   conf_loss: 0.03   prob_loss: 0.00   total_loss: 0.59  
 => STEP 46130   lr: 0.000270   giou_loss: 0.39   conf_loss: 0.02   prob_loss: 0.00   total_loss: 0.41  
 => STEP 46131   lr: 0.000270   giou_loss: 0.37   conf_loss: 0.01   prob_loss: 0.00   total_loss: 0.38  
@@ -146,6 +142,5 @@ Recently, I became aware of debug_info flag: setting debug_info: true in 'solver
 - 行车记录仪的数据人工标注。  
 - 这里有个需要介绍信才能注册获得的[数据集](http://www.openits.cn/openData4/569.jhtml)  
 
-2020-01-10：  
-在实践中存在几个问题，因此花了一段时间构思了另外一个实验：骰子点数识别。具体需要解决的问题会在之后 E#1 中详细描述。  
-因此车牌识别实验延后继续。  
+2020-06-14:  
+新一轮的尝试打算从颜色下手，让神经网络不依靠颜色来识别车牌的范围。  
